(fix) Se quitó el color de fondo de las esquinas de las scrollbars.

--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,10 @@ summary *,
   background: hsl(0, 0%, 85%);
 }
 
+::-webkit-scrollbar-corner {
+  background: none;
+}
+
 ::-webkit-scrollbar-thumb {
   background: hsl(0, 0%, 65%);
 }
